--- a/famous-cyber-attacks.html
+++ b/famous-cyber-attacks.html
@@ -338,7 +338,7 @@
 					<p class="flex-grow mt-2 text-gray-300">
                         WannaCry ransomware exploited a vulnerability in Windows' SMBv1 protocol using the NSA-developed EternalBlue exploit, spreading rapidly across networks, encrypting files, and demanding Bitcoin ransoms. Affecting over 150 countries, including hospitals and governments, it caused massive disruption and highlighted the dangers of ransomware with worm-like capabilities, especially on unpatched systems.</p>
 					<div class="mt-auto pt-4">
-						<a href="/famous-cyber-attacks/wannacry-ransomware-attack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="../famous-cyber-attacks/wannacry-ransomware-attack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -350,7 +350,7 @@
 					<p class="flex-grow mt-2 text-gray-300">Between 2013 and 2014, Yahoo experienced two massive data breaches affecting over 3 billion user accounts, where attackers used spear-phishing and forged cookies to steal sensitive information like names, emails, and hashed passwords. The breaches, linked to nation-state actors and not fully disclosed until years later, severely damaged Yahoo’s reputation and remain among the largest in history.
                     </p>
 					<div class="mt-auto pt-4">
-						<a href="/famous-cyber-attacks/yahoo-data-breaches.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="/famous-cyber-attacks/Yahoo-data-breaches.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
