--- a/famous-cyber-attacks.html
+++ b/famous-cyber-attacks.html
@@ -338,7 +338,7 @@
 					<p class="flex-grow mt-2 text-gray-300">
                         WannaCry ransomware exploited a vulnerability in Windows' SMBv1 protocol using the NSA-developed EternalBlue exploit, spreading rapidly across networks, encrypting files, and demanding Bitcoin ransoms. Affecting over 150 countries, including hospitals and governments, it caused massive disruption and highlighted the dangers of ransomware with worm-like capabilities, especially on unpatched systems.</p>
 					<div class="mt-auto pt-4">
-						<a href="../famous-cyber-attacks/wannacry-ransomware-attack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="wannacry-ransomware-attack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
