--- a/continents/africa.html
+++ b/continents/africa.html
@@ -34,6 +34,7 @@
                 [&::-webkit-scrollbar-thumb]:bg-gray-300
                 dark:[&::-webkit-scrollbar-track]:bg-neutral-700
                 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10">
+					<ul class="space-y-2">
 						<li class="flex items-center space-x-4 p-4">
 							<img src="../assets/logo.svg" class="w-14 h-14">
 							<h4 class="text-2xl">ThreatScope</h4>
@@ -385,45 +386,48 @@
 				</a>
 			</div>
 			<footer class="text-white w-full p-4 md:mt-24 mt-10">
-				<div class="max-w-6xl mx-auto border p-6 rounded md:flex block justify-between bg-indigo-950 border-indigo-900">
-					<div>
-						<div class="flex items-center space-x-4">
-							<img src="../assets/logo.svg" class="h-10 w-10" alt="Logo" />
-							<h4 class="text-3xl font-medium">ThreatScope</h4>
-						</div>
-						<p class="text-gray-400 text-sm mt-2">© 2024 | All rights reserved.</p>
-					</div>
-					<div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:mt-0 mt-8">
-						<div>
-							<h4 class="font-medium">Quick Links</h4>
-							<ul class="mt-2">
-								<li class="text-gray-300 text-sm">Page 1</li>
-								<li class="text-gray-300 text-sm">Page 2</li>
-								<li class="text-gray-300 text-sm">Page 3</li>
-								<li class="text-gray-300 text-sm">Page 4</li>
-							</ul>
-						</div>
-						<div>
-							<h4 class="font-medium">Quick Links</h4>
-							<ul class="mt-2">
-								<li class="text-gray-300 text-sm">Page 1</li>
-								<li class="text-gray-300 text-sm">Page 2</li>
-								<li class="text-gray-300 text-sm">Page 3</li>
-								<li class="text-gray-300 text-sm">Page 4</li>
-							</ul>
-						</div>
-						<div>
-							<h4 class="font-medium">Quick Links</h4>
-							<ul class="mt-2">
-								<li class="text-gray-300 text-sm">Page 1</li>
-								<li class="text-gray-300 text-sm">Page 2</li>
-								<li class="text-gray-300 text-sm">Page 3</li>
-								<li class="text-gray-300 text-sm">Page 4</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</footer>
+            <div class="max-w-6xl mx-auto border p-6 rounded md:flex block justify-between bg-indigo-950 border-indigo-900">
+                <div>
+                    <div class="flex items-center space-x-4">
+                        <img src="../assets/logo.svg" class="h-10 w-10" alt="Logo" />
+                        <h4 class="text-3xl font-medium">ThreatScope</h4>
+                    </div>
+                    <p class="text-gray-400 text-sm mt-2">© 2024 | All rights reserved.</p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:mt-0 mt-8">
+                    <div>
+                        <h4 class="font-medium">Quick Links</h4>
+                        <ul class="mt-2">
+                            <li class="text-gray-300 text-sm"><a href="../index.html">Home</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../recent-attacks.html">Recent News</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../concepts-of-cybersecurity.html">Learn Now</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../about-us.html">About Us</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../contact-us.html">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h4 class="font-medium">Members</h4>
+                        <ul class="mt-2">
+                            <li class="text-gray-300 text-sm"><a href="https://elaborate-paprenjak-b3b1e1.netlify.app/">Cuenco, John Louie</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://biybow.github.io/purtfoillio/portfolio.html">Laugo, Cyril Marius</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://ltshmarciano.github.io/Personal-Website/">Marciano, Latisha***</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://sylvie7503.github.io/LandingPage/home.html">Moya, Patrick Christopher</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://freakest.github.io/janart.github.io/LandingPage/index.html">Pagaduan, Jan Art</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h4 class="font-medium">Members</h4>
+                        <ul class="mt-2">
+                            <li class="text-gray-300 text-sm"><a href="https://je-sp.github.io/jesshub/index.html">Paguel, Jess Patrick</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://joaquinpangilinan.github.io/MPortfolio/">Pangilinan, Myles</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://edwardallen-ricafranca.github.io/TheTarnishEd/">Ricafranca, Edward Allen</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://cyieie.github.io/MTerm-Project/index.html">Songodanan, Cyrus</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://tadiyusss.github.io/integrative-portfolio/">Toledo, Thaddeus</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
 		</div>
 		<script src="../assets/js/main.js"></script>
 		<a href="#hero" class="fixed bottom-5 right-5 bg-indigo-700 text-white p-3 rounded-full shadow-lg hover:bg-indigo-600 transition duration-300">
