fixed overlap issues

--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
                 [&::-webkit-scrollbar-track]:bg-gray-100
                 [&::-webkit-scrollbar-thumb]:bg-gray-300
                 dark:[&::-webkit-scrollbar-track]:bg-neutral-700
-                dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10">
+                dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10 z-[60]">
                     <ul class="space-y-6 text-left">
                         <li class="flex items-center space-x-4 p-4">
                             <img src="assets/logo.svg" class="w-14 h-14">
