--- a/gallery.html
+++ b/gallery.html
@@ -388,6 +388,10 @@
                     <a href="assets/gallery/push.png">
                         <img src="assets/gallery/push.png" class="rounded-lg shadow-lg w-72 md:h-96 h-48 object-cover">
                     </a>
+
+                    <a href="assets/gallery/eval.png">
+                        <img src="assets/gallery/eval.png" class="rounded-lg shadow-lg w-72 md:h-96 h-48 object-cover">
+                    </a>
                 </div>
             </div>
 		</div>
