--- a/future-cyber-threats/5g-and-beyond.html
+++ b/future-cyber-threats/5g-and-beyond.html
@@ -492,7 +492,7 @@
             <div class="max-w-6xl mx-auto border p-6 rounded md:flex block justify-between bg-indigo-950 border-indigo-900">
                 <div>
                     <div class="flex items-center space-x-4">
-                        <img src="../../assets/logo.svg" class="h-10 w-10" alt="Logo" />
+                        <img src="../assets/logo.svg" class="h-10 w-10" alt="Logo" />
                         <h4 class="text-3xl font-medium">ThreatScope</h4>
                     </div>
                     <p class="text-gray-400 text-sm mt-2">© 2024 | All rights reserved.</p>
@@ -501,11 +501,11 @@
                     <div>
                         <h4 class="font-medium">Quick Links</h4>
                         <ul class="mt-2">
-                            <li class="text-gray-300 text-sm"><a href="../../index.html">Home</a></li>
-                            <li class="text-gray-300 text-sm"><a href="../../recent-attacks.html">Recent News</a></li>
-                            <li class="text-gray-300 text-sm"><a href="../../concepts-of-cybersecurity.html">Learn Now</a></li>
-                            <li class="text-gray-300 text-sm"><a href="../../about-us.html">About Us</a></li>
-                            <li class="text-gray-300 text-sm"><a href="../../contact-us.html">Contact Us</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../index.html">Home</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../recent-attacks.html">Recent News</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../concepts-of-cybersecurity.html">Learn Now</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../about-us.html">About Us</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../contact-us.html">Contact Us</a></li>
                         </ul>
                     </div>
                     <div>
