mismatch color on footer fix

--- a/future-cyber-threats/biohacking.html
+++ b/future-cyber-threats/biohacking.html
@@ -485,7 +485,7 @@
 		
 		
 
-		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
+		<footer class="text-white w-full p-4 pt-24">
             <div class="max-w-6xl mx-auto border p-6 rounded md:flex block justify-between bg-indigo-950 border-indigo-900">
                 <div>
                     <div class="flex items-center space-x-4">
