--- a/famous-cyber-attacks.html
+++ b/famous-cyber-attacks.html
@@ -338,7 +338,7 @@
 					<p class="flex-grow mt-2 text-gray-300">
                         WannaCry ransomware exploited a vulnerability in Windows' SMBv1 protocol using the NSA-developed EternalBlue exploit, spreading rapidly across networks, encrypting files, and demanding Bitcoin ransoms. Affecting over 150 countries, including hospitals and governments, it caused massive disruption and highlighted the dangers of ransomware with worm-like capabilities, especially on unpatched systems.</p>
 					<div class="mt-auto pt-4">
-						<a href="../famous-cyber-attacks/wannacry-ransomware-attack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="famous-cyber-attacks/wannacry-ransomware-attack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -350,7 +350,7 @@
 					<p class="flex-grow mt-2 text-gray-300">Between 2013 and 2014, Yahoo experienced two massive data breaches affecting over 3 billion user accounts, where attackers used spear-phishing and forged cookies to steal sensitive information like names, emails, and hashed passwords. The breaches, linked to nation-state actors and not fully disclosed until years later, severely damaged Yahoo’s reputation and remain among the largest in history.
                     </p>
 					<div class="mt-auto pt-4">
-						<a href="../famous-cyber-attacks/Yahoo-data-breaches.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="famous-cyber-attacks/Yahoo-data-breaches.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -361,7 +361,7 @@
 					<h5 class="text-lg font-medium">I Love You Virus</h5>
 					<p class="flex-grow mt-2 text-gray-300">The ILOVEYOU virus was a computer worm from the Philippines that spread via email disguised as a love confession, overwriting files and sending itself to all contacts in a victim’s address book. Causing billions in damages and impacting users worldwide, it prompted major changes in email security and remains one of the most infamous computer viruses in history.</p>
 					<div class="mt-auto pt-4">
-						<a href="../famous-cyber-attacks/i-love-you-virus.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="famous-cyber-attacks/i-love-you-virus.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -373,7 +373,7 @@
 					<p class=" text-gray-300">In November 2014, Sony Pictures suffered a major cyberattack involving the Destover wiper malware, which erased data and leaked sensitive internal information, crippling the company’s operations. Allegedly carried out by North Korean state-sponsored hackers in response to The Interview, the attack caused severe financial and reputational damage and remains a landmark case in corporate cyber-espionage.
                     </p>
 					<div class="mt-auto pt-4">
-						<a href="../famous-cyber-attacks/sony-picture-hack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
+						<a href="famous-cyber-attacks/sony-picture-hack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -385,7 +385,7 @@
 					<p class="flex-grow mt-2 text-gray-300">LockBit is a dominant ransomware group operating under a Ransomware-as-a-Service (RaaS) model, enabling affiliates to launch attacks in exchange for profit shares, with evolving versions like LockBit 2.0, 3.0, and Black offering faster encryption and improved evasion. Since 2020, it has targeted high-value organizations, using data theft and extortion tactics, and despite law enforcement efforts, remains highly active as of 2025.
                     </p>
 					<div class="mt-auto pt-4">
-						<a href="../famous-cyber-attacks/lockbit-ransom.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="famous-cyber-attacks/lockbit-ransom.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -397,7 +397,7 @@
 					<p class="flex-grow mt-2 text-gray-300">NotPetya is a ransomware variant that overwrites the Master Boot Record to encrypt files upon reboot, often forcing a system crash to trigger its payload. It spreads internally using the EternalBlue exploit and stolen credentials via tools like PSEXEC and WMI, but unlike WannaCry, it doesn’t use EternalBlue for external propagation, and due to a non-functional recovery email, paying the ransom is futile—though a “vaccination” method has been found to neutralize it.
                     </p>
 					<div class="mt-auto pt-4">
-						<a href="../famous-cyber-attacks/not-petya.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="famous-cyber-attacks/not-petya.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -409,7 +409,7 @@
 					<p class="flex-grow mt-2 text-gray-300">Pegasus, developed by Israeli cyber-intelligence firm NSO Group, is a highly advanced spyware capable of infecting iPhones through "zero-click" attacks and accessing sensitive data like messages, emails, and encrypted files. Though marketed for government use in legitimate security operations, its deployment against journalists, activists, and political figures has sparked global outrage, making it one of the most controversial surveillance tools in the world.
                     </p>
 					<div class="mt-auto pt-4">
-						<a href="../famous-cyber-attacks/pegasus-spyware.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="famous-cyber-attacks/pegasus-spyware.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -421,7 +421,7 @@
 					<p class="flex-grow mt-2 text-gray-300">In March 2016, a major data breach at the Philippine Commission on Elections (COMELEC) exposed the personal information of 55 million voters after hackers exploited website vulnerabilities using SQL injection. The attack, carried out by "LulzSec Pilipinas," led to serious legal and political fallout, public release of sensitive data, and lasting damage to the credibility of the Philippine electoral system.
                     </p>
 					<div class="mt-auto pt-4">
-						<a href="../famous-cyber-attacks/2016-comelec-data-breach.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="famous-cyber-attacks/2016-comelec-data-breach.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -432,7 +432,7 @@
 					<h5 class="text-lg font-medium">MySpace XSS</h5>
 					<p class="flex-grow mt-2 text-gray-300">In October 2005, Samy Kamkar exploited an XSS vulnerability on MySpace by embedding a 4KB script in his profile that automatically added him as a friend and hero to anyone who viewed it, spreading to over a million users in under 20 hours. Though he claimed it was a harmless experiment, the incident forced MySpace offline, led to legal consequences for Kamkar, and highlighted the critical need for proper input filtering to prevent XSS attacks.</p>
 					<div class="mt-auto pt-4">
-						<a href="../famous-cyber-attacks/myspace-xss.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="famous-cyber-attacks/myspace-xss.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -444,7 +444,7 @@
 					<p class="flex-grow mt-2 text-gray-300">The AWS DDoS attack in Q1 2020, which generated an amazing 2.3 Tbps of traffic, was the biggest attack ever documented at the time. By using a Connection-less Lightweight Directory Access Protocol (CLDAP) reflection technique, this attack far surpassed the previous record. CLDAP servers are an excellent tool for attackers because, if they are exposed or misconfigured, they can respond to spoof requests with significantly larger data packets, thus increasing the assault.
                     </p>
 					<div class="mt-auto pt-4">
-						<a href="../famous-cyber-attacks/the-aws-ddos-attack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
+						<a href="famous-cyber-attacks/the-aws-ddos-attack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
