revised code: all subtopics under physical-protective-measure with contents

--- a/protective-measure/multi-factor-authentication.html
+++ b/protective-measure/multi-factor-authentication.html
@@ -326,13 +326,15 @@
 					<a href="#" class="text-sm">Multi-Factor Authentication</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Multi-Factor Authentication</h4>
-                <div class="flex items-center space-x-6 text-gray-300">
-                    <a href="#overview">Overview</a><span>|</span>
-                    <a href="#detection">Identity Verification</a><span>|</span>
-                    <a href="#removal">Entry Logging</a><span>|</span>
-                    <a href="#management">Misuse Prevention</a><span>|</span>
-                    <a href="#practical">Practical Usage</a><span>|</span>
-                    <a href="#limitations">Limitations</a>
+                <div class="flex justify-center mt-8"></div>
+                    <div class="flex items-center space-x-6 text-gray-300">
+                        <a href="#overview">Overview</a><span>|</span>
+                        <a href="#detection">Identity Verification</a><span>|</span>
+                        <a href="#removal">Entry Logging</a><span>|</span>
+                        <a href="#management">Misuse Prevention</a><span>|</span>
+                        <a href="#practical">Practical Usage</a><span>|</span>
+                        <a href="#limitations">Limitations</a>
+                    </div>
                 </div>
             </div>
 		</div>
