--- a/protective-measure/biometric-access-control.html
+++ b/protective-measure/biometric-access-control.html
@@ -10,7 +10,7 @@
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
 		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('./assets/bio.jpeg')] bg-cover bg-center bg-no-repeat relative">
-			<nav class="absolute inset-0 z-10">
+			<nav class="relative z-50">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                         <div class="flex items-center space-x-4">
@@ -317,7 +317,7 @@
             </nav>
 			<div class="absolute inset-0 bg-gradient-to-b from-black/40 to-black"></div>
 			
-			<div class="relative max-w-6xl mx-auto mt-20 text-left">
+			<div class="relative max-w-6xl mx-auto text-left z-10">
                 <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
                     <a class="text-sm" href="../protective-measure.html">Protective Measures</a>
                     <span class="text-gray-300 text-sm">/</span>
