--- a/protective-measure/fire-suppresion-systems.html
+++ b/protective-measure/fire-suppresion-systems.html
@@ -329,9 +329,9 @@
                 <div class="flex justify-center mt-8"></div>
                     <div class="flex items-center space-x-6 text-gray-300">
                         <a href="#overview">Overview</a><span>|</span>
-                        <a href="#detection">Identity Verification</a><span>|</span>
-                        <a href="#removal">Entry Logging</a><span>|</span>
-                        <a href="#management">Misuse Prevention</a><span>|</span>
+                        <a href="#detection">Early Fire Detection</a><span>|</span>
+                        <a href="#removal">Suppression Mechanisms</a><span>|</span>
+                        <a href="#management">Safety Integration</a><span>|</span>
                         <a href="#practical">Practical Usage</a><span>|</span>
                         <a href="#limitations">Limitations</a>
                     </div>
