--- a/protective-measure/lokced-server-room.html
+++ b/protective-measure/lokced-server-room.html
@@ -330,9 +330,9 @@
                 <div class="flex justify-center mt-8"></div>
                     <div class="flex items-center space-x-6 text-gray-300">
                         <a href="#overview">Overview</a><span>|</span>
-                        <a href="#detection">Identity Verification</a><span>|</span>
-                        <a href="#removal">Entry Logging</a><span>|</span>
-                        <a href="#management">Misuse Prevention</a><span>|</span>
+                        <a href="#detection">Restricts Unauthorized Access</a><span>|</span>
+                        <a href="#removal">Reduces Risk of Tampering and Theft</a><span>|</span>
+                        <a href="#management">Enhances Environmental Security</a><span>|</span>
                         <a href="#practical">Practical Usage</a><span>|</span>
                         <a href="#limitations">Limitations</a>
                     </div>
