--- a/protective-measure/security-guard.html
+++ b/protective-measure/security-guard.html
@@ -328,9 +328,9 @@
                 <div class="flex justify-center mt-8"></div>
                     <div class="flex items-center space-x-6 text-gray-300">
                         <a href="#overview">Overview</a><span>|</span>
-                        <a href="#detection">Identity Verification</a><span>|</span>
-                        <a href="#removal">Entry Logging</a><span>|</span>
-                        <a href="#management">Misuse Prevention</a><span>|</span>
+                        <a href="#detection">Visual Deterrence</a><span>|</span>
+                        <a href="#removal">Immediate Response</a><span>|</span>
+                        <a href="#management">Access Control Enforcement</a><span>|</span>
                         <a href="#practical">Practical Usage</a><span>|</span>
                         <a href="#limitations">Limitations</a>
                     </div>
