--- a/protective-measure/update-programs-and-systems-regularly.html
+++ b/protective-measure/update-programs-and-systems-regularly.html
@@ -329,9 +329,10 @@
                 <div class="flex justify-center mt-8"></div>
                     <div class="flex items-center space-x-6 text-gray-300">
                         <a href="#overview">Overview</a><span>|</span>
-                        <a href="#detection">Identity Verification</a><span>|</span>
-                        <a href="#removal">Entry Logging</a><span>|</span>
-                        <a href="#management">Misuse Prevention</a><span>|</span>
+                        <a href="#detection">Security Patches</a><span>|</span>
+                        <a href="#removal">Network Segmentation</a><span>|</span>
+                        <a href="#automatic">Automatic Update Services</a><span>|</span>
+                        <a href="#management">Update Management System</a><span>|</span>
                         <a href="#practical">Practical Usage</a><span>|</span>
                         <a href="#limitations">Limitations</a>
                     </div>
