--- a/protective-measure/software-protective-measures.html
+++ b/protective-measure/software-protective-measures.html
@@ -10,7 +10,7 @@
 	<body class="text-white text-roboto">
 		<div class="min-h-screen bg-[#0b0f2a] bg-[radial-gradient(circle_at_top_right,_rgba(0,159,183,0.3)_0%,_transparent_60%),_radial-gradient(circle_at_bottom_left,_rgba(0,159,183,0.3)_0%,_transparent_60%)]">
 		<div id="hero" class="w-full h-dvh relative">
-            <nav class="absolute inset-0 z-10">
+            <nav class="relative z-50">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                         <div class="flex items-center space-x-4">
@@ -48,7 +48,7 @@
                 [&::-webkit-scrollbar-track]:bg-gray-100
                 [&::-webkit-scrollbar-thumb]:bg-gray-300
                 dark:[&::-webkit-scrollbar-track]:bg-neutral-700
-                dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10">
+                dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10 z-[60]">
                     <ul class="space-y-6 text-left">
                         <li class="flex items-center space-x-4 p-4">
                             <img src="../assets/logo.svg" class="w-14 h-14">
@@ -316,8 +316,8 @@
                 <!-- END OF SIDE BAR -->
             </nav>
 
-            <div class="grid md:grid-cols-2 grid-cols-1 max-w-6xl mx-auto">
-                <div class="flex items-center text-gray-300 mt-20 md:px-4 px-4 space-x-2">
+            <div class="relative max-w-6xl mx-auto text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-4 px-4 space-x-2">
                     <a class="text-sm" href="../protective-measure.html">Protective Measures</a>
                     <span class="text-gray-300 text-sm">/</span>
                     <a href="software-protective-measures.html" class="text-sm">Software Protective Measures</a>
