--- a/protective-measure/update-programs-and-systems-regularly.html
+++ b/protective-measure/update-programs-and-systems-regularly.html
@@ -10,7 +10,7 @@
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
 		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/firewall.jpg')] bg-cover bg-center bg-no-repeat relative">
-			<nav class="absolute inset-0 z-10">
+			<nav class="relative z-50">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                         <div class="flex items-center space-x-4">
@@ -48,7 +48,7 @@
                 [&::-webkit-scrollbar-track]:bg-gray-100
                 [&::-webkit-scrollbar-thumb]:bg-gray-300
                 dark:[&::-webkit-scrollbar-track]:bg-neutral-700
-                dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10">
+                dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10 z-[60]">
                     <ul class="space-y-6 text-left">
                         <li class="flex items-center space-x-4 p-4">
                             <img src="../assets/logo.svg" class="w-14 h-14">
@@ -316,8 +316,7 @@
                 <!-- END OF SIDE BAR -->
             </nav>
 			<div class="absolute inset-0 bg-gradient-to-b from-black/40 to-black"></div>
-			
-			<div class="relative max-w-6xl mx-auto mt-20 text-left">
+			<div class="relative max-w-6xl mx-auto text-left z-10">
                 <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
                     <a class="text-sm" href="../protective-measure.html">Protective Measures</a>
                     <span class="text-gray-300 text-sm">/</span>
