--- a/protective-measure/surveillance-cameras.html
+++ b/protective-measure/surveillance-cameras.html
@@ -340,13 +340,13 @@
 		<div class="bg-gradient-to-b from-black to-[#141528]">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="overview">Overview</h4>
 					<div class="space-y-2">
 						<p>Surveillance cameras are electronic devices used to capture and record video footage of specific areas. They are essential in both private and public security systems. These cameras can be placed indoors or outdoors and come in various types like dome, bullet, and PTZ. Surveillance cameras help deter criminal activities by increasing the risk of being caught. They are also useful for monitoring employee behavior, preventing theft, and investigating incidents. Many cameras now include motion detection, night vision, and remote viewing features. Overall, they play a key role in improving physical security.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Enhanced Security & Crime Prevention</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="detection">Enhanced Security & Crime Prevention</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Access Control Monitoring</h6>
@@ -361,7 +361,7 @@
 							<p class="">Modern surveillance systems enable remote access to live and recorded footage from any location, benefiting multi-site organizations and after-hours monitoring. </p>
 						</div>
 					</div>
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Operational Oversight & Emergency Response</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="removal">Operational Oversight & Emergency Response</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Enhancing Operational Efficiency Through Surveillance</h6>
@@ -377,7 +377,7 @@
 							<p class="">Surveillance systems monitor and record entry and exit activities, ensuring only authorized personnel access sensitive areas.</p>
 						</div>
 					</div>
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Cost-Effectiveness & Regulatory Compliance</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="management">Cost-Effectiveness & Regulatory Compliance</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Scalability in Surveillance Deployment
@@ -395,7 +395,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
+					<h3 class="text-2xl font-medium text-[#E2C8F1]" id="practical">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
 							<a href="../assets/cctv1.jpg" target="image-viewer"><img src="../assets/cctv1.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
@@ -433,7 +433,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="limitations">Limitations</h4>
                     <div class="space-y-2">
                         <p>Despite their benefits, surveillance cameras have limitations. They can be expensive to install and maintain, especially in large areas. Privacy concerns often arise, especially in public or employee-monitored spaces. Cameras can be vandalized, covered, or avoided if not positioned properly. In poor lighting or weather, image quality may suffer, making footage less useful. They only record what happens—they don’t prevent it in real time. Cameras also depend on power and network connections, making them vulnerable to outages. Lastly, interpreting footage can be time-consuming and may require trained staff.</p>
                     </div>
