update the hero section

--- a/protective-measure/lokced-server-room.html
+++ b/protective-measure/lokced-server-room.html
@@ -341,13 +341,13 @@
 		<div class="bg-gradient-to-b from-black to-[#141528]">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="overview">Overview</h4>
 					<div class="space-y-2">
 						<p>Locked server rooms are secured spaces that store critical IT infrastructure like servers, networking equipment, and backup systems. These rooms are protected using keys, access cards, biometric readers, or a combination of these. They are designed to prevent unauthorized physical access to sensitive data systems. Restricted access helps avoid tampering, theft, or damage to hardware. Physical separation also limits the chance of insider threats reaching core systems. Such rooms often include climate control and fire suppression to protect equipment. Overall, locked server rooms are essential in maintaining strong physical cybersecurity.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Restricts Unauthorized Access</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="detection">Restricts Unauthorized Access</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Physical Isolation</h6>
@@ -362,7 +362,7 @@
 							<p class="">If a security incident occurs, logs and access records help identify potential culprits. This improves the speed and accuracy of investigations. It also acts as a deterrent, since individuals know their entry is being recorded. </p>
 						</div>
 					</div>
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Reduces Risk of Tampering and Theft</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="removal">Reduces Risk of Tampering and Theft</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Hardware Protection</h6>
@@ -377,7 +377,7 @@
 							<p class="">In companies handling financial data, these rooms add another security layer for protecting customer and transaction information. A secured environment prevents unauthorized access to systems managing payment or identity data. It helps in meeting compliance standards like PCI</p>
 						</div>
 					</div>
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Enhances Environmental Security</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="management">Enhances Environmental Security</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Climate Control</h6>
@@ -394,7 +394,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
+					<h3 class="text-2xl font-medium text-[#E2C8F1]" id="practical">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
 							<a href="../assets/server1.jpeg" target="image-viewer"><img src="../assets/server1.jpeg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" />
@@ -432,7 +432,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="limitations">Limitations</h4>
                     <div class="space-y-2">
                         <p>Locked server rooms are only as effective as their access control system. If keys or cards are lost or stolen, unauthorized entry becomes possible. Biometric systems may fail or be bypassed if not maintained. Guards or cameras may still be needed to watch the room's entrance. If the room lacks fire suppression or environmental controls, equipment damage is still a risk. There's also a risk of staff forgetting to lock the door after entry. These rooms are secure but not infallible, and they must be part of a larger security strategy.</p>
                     </div>
