--- a/protective-measure/security-guard.html
+++ b/protective-measure/security-guard.html
@@ -340,13 +340,13 @@
 		<div class="bg-gradient-to-b from-black to-[#141528]">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="overview">Overview</h4>
 					<div class="space-y-2">
 						<p>Security guards are trained professionals hired to protect people, property, and assets. They monitor entrances, patrol facilities, and ensure that no unauthorized individuals gain access. Their presence deters theft, vandalism, and other crimes. Guards are also trained to respond quickly to emergencies such as medical incidents, fires, or breaches. Unlike automated systems, they can assess situations and make decisions in real time. They often act as the first line of defense in both corporate and public settings. Their role is crucial in maintaining physical security on-site.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Visual Deterrence</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="detection">Visual Deterrence</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Uniformed Presence</h6>
@@ -361,7 +361,7 @@
 							<p class="">Stationing guards at entrances and exits provides a clear visual indication that access is controlled and monitored. This visible checkpoint discourages unauthorized entry and potential security breaches.</p>
 						</div>
 					</div>
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Immediate Response</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="removal">Immediate Response</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Direct Intervention in Threats</h6>
@@ -376,7 +376,7 @@
 							<p class="">If a guard identifies an unauthorized person attempting to gain access or engaging in illegal activity, they can immediately take action to detain the individual according to their training and protocols.</p>
 						</div>
 					</div>
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Access Control Enforcement</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="management">Access Control Enforcement</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2">
 							<h6 class="font-medium text-xl">Identity Verification</h6>
@@ -393,7 +393,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
+					<h3 class="text-2xl font-medium text-[#E2C8F1]" id="practical">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
 							<a href="../assets/sec1.jpg" target="image-viewer"><img src="../assets/sec1.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
@@ -431,7 +431,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="limitations">Limitations</h4>
                     <div class="space-y-2">
                         <p>Despite their strengths, security guards have limitations. They can only cover limited areas at one time and may miss incidents out of their sight. Their effectiveness depends on training, alertness, and communication. Guards are also vulnerable in dangerous confrontations without proper backup. Hiring trained personnel can be expensive, especially for 24/7 coverage. Fatigue or complacency can reduce effectiveness during long shifts. Additionally, human error may lead to incorrect judgments or failure to notice subtle threats. While essential, guards are most effective when combined with surveillance and access systems.</p>
                     </div>
